--- a/menu-styles.css
+++ b/menu-styles.css
@@ -4,10 +4,15 @@ h1, h2 {
    
 }
 
+#menu {
+    text-align: left;
+    font-family: Lobster;
+}
+
 h5 {
     text-align: center;
     font-style: italic;
-    font-weight: normal;
+    font-weight: bold;
     
 }
 
@@ -20,20 +25,20 @@ nav {
 
 }
 
-ul {
+dl {
     list-style-type: none;
     line-height: 0.9;
     
 }
 
-li{
+dt{
     
     font-weight: bold;
 }
 
-p {
+dd {
     font-style: italic;
-    line-height: 0.7;
+    line-height: 1;
     margin-left: 40px;
 }
 
@@ -46,17 +51,20 @@ img {
     float: right;
     margin: 0 0 10px 10px;
 }
-
-#logo {
-    float: none;
-    margin: 0 0 10px 10px;
+#imgBorder {
+    margin: 0 auto;
+    border-style: solid;
+    border-width: 5px;
+    border-color: firebrick;
 }
 
 hr {
     height: 10px;
-    color: firebrick;
-    background-color: firebrick;
-    
+    background-color: firebrick; 
+}
+
+.centerTable {
+    margin: 0 auto;
 }
 
 th {
